Fixed display of Network tables on My Account and Search pages: we now define and populate tables, and only after that make them visible so that the filters of table headers are shown correctly.
The Network table on the Search page can be distorted, so we added
gridApi.core.on.rowsRendered method that calls
$scope.networkGridApi.core.handleWindowResize after 100ms to fix this issue.

Added indication of indexed networks (magnifying glass) in Network tables
on all pages.

--- a/css/ndex-angular-site.css
+++ b/css/ndex-angular-site.css
@@ -774,9 +774,6 @@ ul.ndex-nav-pills > li > a:hover {
     margin-left: 1em;
 }
 
-.networkVisibilityValue {
-    color: #18AD31;
-}
 
 .cytoscapeCanvas {
     color: #777;
